v2 parseScriptStmt 1